fixed horizontal alignment

--- a/style.css
+++ b/style.css
@@ -41,13 +41,14 @@ body {
 }
 .timeline__dot{
     position: absolute;
-    top:0;
+    top:40%;
     left:50%;
     width:15px;
     height:15px;
     background: black;
     border-radius: 50%;
     transform:translateX(-50%);
+
 }
 
 
